--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/landing_background">
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_icon_splash"
         android:layout_width="61dp"
         android:layout_height="42dp"
@@ -22,7 +22,7 @@
         android:text="@string/text_name"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
-        app:fontFamily="@font/Lobster-1" />
+        app:fontFamily="@font/lobster" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +43,7 @@
         android:layout_marginBottom="16dp"
         android:text="@string/text_content"
         android:textColor="@color/colorWhite"
-        app:fontFamily="@font/Lobster-1" />
+        app:fontFamily="@font/lobster" />
 
     <TextView
         android:id="@+id/tv_intro"
