--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFFFF</color>
     <color name="colorGray">#FF808080</color>
     <color name="colorTextBg">#FF8F9AA8</color>
+    <color name="colorBlack">#FF000000</color>
 </resources>
