--- a/app/src/main/res/layout/item_find_layout.xml
+++ b/app/src/main/res/layout/item_find_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="@dimen/dp_5"
+    android:orientation="vertical"
+    app:cardCornerRadius="@dimen/dp_10">
 
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -31,5 +34,5 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
 
