--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -1,57 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="@dimen/dp_250"
+    android:layout_margin="@dimen/dp_5"
+    app:cardCornerRadius="@dimen/dp_10"
+    app:cardElevation="@dimen/dp_10">
 
-    <FrameLayout
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/img_rank_photo"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_250">
+        android:layout_height="match_parent" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/img_rank_photo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:id="@+id/lyt_rank_moban"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/boman_selector"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/lyt_rank_moban"
+        <RelativeLayout
+            android:id="@+id/rl_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/boman_selector"
-            android:orientation="vertical">
+            android:gravity="center">
 
-            <RelativeLayout
-                android:id="@+id/rl_text"
+            <TextView
+                android:id="@+id/txt_rank_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="@dimen/dp_28"
+                android:gravity="center"
+                android:text="@string/text_test"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_20"
+                app:fontFamily="@font/fzlantingheis_regular" />
+
+            <TextView
+                android:id="@+id/txt_rank_time"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txt_rank_title"
+                android:layout_marginTop="@dimen/dp_2"
+                android:gravity="center"
+                android:textColor="@color/colorWhite" />
+        </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/txt_rank_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="@dimen/dp_28"
-                    android:gravity="center"
-                    android:text="@string/text_test"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/sp_20"
-                    app:fontFamily="@font/fzlantingheis_regular" />
-
-                <TextView
-                    android:id="@+id/txt_rank_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/txt_rank_title"
-                    android:layout_marginTop="@dimen/dp_2"
-                    android:gravity="center"
-                    android:textColor="@color/colorWhite" />
-            </RelativeLayout>
-
-        </LinearLayout>
+    </LinearLayout>
 
 
-    </FrameLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
